--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="hirrd-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hirrd - Job Portal</title>
+    <meta
+      id="meta-description"
+      name="description"
+      content="Find your dream job and get hired. Explore thousands of job listings or find the perfect candidate"
+    />
+    <meta id="og-title" property="og:title" content="Hirrd - Job Portal" />
+    <meta id="og-image" property="og:image" content="hirrd-favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
