--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       content="Find your dream job and get hired. Explore thousands of job listings or find the perfect candidate"
     />
     <meta id="og-title" property="og:title" content="Hirrd - Job Portal" />
-    <meta id="og-image" property="og:image" content="hirrd-favicon.svg" />
+    <meta id="og-image" property="og:image" content="logo.png" />
+    <meta property="og:image:width" content="100" />
+    <meta property="og:image:height" content="60" />
   </head>
   <body>
     <div id="root"></div>
